# birbnet

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-all.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py
docs/: installing_graph_tool.md
notebooks/: analytics.ipynb  crawl_stats.ipynb  graph_tool.ipynb  networkx.ipynb
src/birbnet/: __init__.py  birb.py  cli.py  config.py  crawler.py  data_utils.py  exceptions.py  http_utils.py  models.py  types.py  validate.py
